--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,7 @@
 
  <!-- Template Stylesheet -->
  <link href="css/style.css" rel="stylesheet">
-    <title>React App</title>
+    <title>MACV</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
